data info and pseudocode

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -13,35 +13,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Imports\n"
+    "#Imports\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Analysis annotations\n",
     "dgc_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseanalysislabels.csv\"\n",
+    "with open(dgc_path) as f:\n",
+    "  dgc = pd.read_csv(f)\n",
     "seagull_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseanalysislabels_seagull.csv\"\n",
+    "with open(seagull_path) as f:\n",
+    "  seagull = pd.read_csv(f)\n",
     "\n",
     "#Refined annotations\n",
-    "ref_dgc = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/CV4Ecology/Prototyping/Data/Labels/train_val_test/20230307_zooniverseconsensuslabels.csv\"\n",
-    "ref_seagull = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/CV4Ecology/Prototyping/Data/Labels/train_val_test/20230307_zooniverseconsensuslabels_seagull.csv\""
+    "ref_dgc = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseconsensuslabels_nodrops.csv\"\n",
+    "with open(ref_dgc) as f:\n",
+    "  ref_zoo = pd.read_csv(f)\n",
+    "ref_seagull = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseconsensuslabels_seagull_nodrops.csv\"\n",
+    "with open(ref_seagull) as f:\n",
+    "  ref_sea = pd.read_csv(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26254\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2            15178\n",
+       "1             6674\n",
+       "3             3305\n",
+       "[1 3]          758\n",
+       "4              122\n",
+       "[2 3]           62\n",
+       "[1 2]           36\n",
+       "[2 4]           34\n",
+       "[3 4]           29\n",
+       "[1 2 3]         22\n",
+       "[1 4]           14\n",
+       "[1 3 4]         10\n",
+       "[2 3 4]          6\n",
+       "[1 2 3 4]        2\n",
+       "[1 2 4]          2\n",
+       "Name: category_id, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Refined dataset statistics"
+    "#Refined dataset statistics\n",
+    "print(len(ref_sea))\n",
+    "#ref_zoo.head()\n",
+    "ref_sea[\"category_id\"].value_counts()"
    ]
   },
   {
@@ -60,16 +105,46 @@
    "outputs": [],
    "source": [
     "#INDIVIDUAL LABELER METRICS\n",
+    "#Goal: report avg count, ID consensus across images, break down by morphological group; also min/max individual vs group consensus\n",
+    "#Positional error: create confusion matrix, report commission error, omission error, RMSE, MAE -- bounding boxes, comparing each labeler to the consensus\n",
     "\n",
     "#Score agreement with consensus class label\n",
     "\n",
     "#Score %IOU agreement with consensus box "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OUTPUTS\n",
+    "\n",
+    "#Line graph of average identification consensus across all images (y; % agreement) by individual (x). One for expert, one for crowdsourced.  \n",
+    "#Bar graph of consensus (y; % agreement) by morphology (x; duck/goose/crane). Two bars per class, one for expert, one for crowdsourced\n",
+    "#Line graph of average count consensus across all images (y; % agreement) by individual (x). One for expert, one for crowdsourced.  \n",
+    "#Line graph of consensus (y; % agreement) by density (x; consensus # of individuals per image). One line for expert, one line for crowdsourced.\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "dronesforducks",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   },
   "orig_nbformat": 4
  },
