--- a/expertconsensus.ipynb
+++ b/expertconsensus.ipynb
@@ -49,10 +49,26 @@
    "outputs": [],
    "source": [
     "#INDIVIDUAL LABELER METRICS\n",
+    "#Goal: report avg count, ID consensus across images, break down by morphological group; also min/max individual vs group consensus\n",
+    "#Positional error: create confusion matrix, report commission error, omission error, RMSE, MAE -- bounding boxes, comparing each labeler to the consensus\n",
     "\n",
     "#Score agreement with consensus class label\n",
     "\n",
     "#Score %IOU agreement with consensus box "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OUTPUTS\n",
+    "\n",
+    "#Line graph of average identification consensus across all images (y; % agreement) by individual (x). One for expert, one for crowdsourced.  \n",
+    "#Bar graph of consensus (y; % agreement) by morphology (x; duck/goose/crane). Two bars per class, one for expert, one for crowdsourced\n",
+    "#Line graph of average count consensus across all images (y; % agreement) by individual (x). One for expert, one for crowdsourced.  \n",
+    "#Line graph of consensus (y; % agreement) by density (x; consensus # of individuals per image). One line for expert, one line for crowdsourced.\n"
    ]
   }
  ],
