investigating cluster reliability

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,66 +36,112 @@
     "  seagull = pd.read_csv(f)\n",
     "\n",
     "#Refined annotations\n",
-    "ref_dgc = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseconsensuslabels_nodrops.csv\"\n",
+    "#Drops\n",
+    "ref_dgc = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseconsensuslabels.csv\"\n",
     "with open(ref_dgc) as f:\n",
     "  ref_zoo = pd.read_csv(f)\n",
-    "ref_seagull = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseconsensuslabels_seagull_nodrops.csv\"\n",
+    "ref_seagull = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseconsensuslabels_seagull.csv\"\n",
     "with open(ref_seagull) as f:\n",
-    "  ref_sea = pd.read_csv(f)"
+    "  ref_sea = pd.read_csv(f)\n",
+    "#No Drops\n",
+    "dgc_nodrops = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseconsensuslabels_nodrops.csv\"\n",
+    "with open(dgc_nodrops) as f:\n",
+    "  zoo_nodrops = pd.read_csv(f)\n",
+    "seagull_nodrops = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseconsensuslabels_seagull_nodrops.csv\"\n",
+    "with open(seagull_nodrops) as f:\n",
+    "  sea_nodrops = pd.read_csv(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26254\n"
+      "362 seagull images were removed due to bad clustering, or 0.11806914546640573 percent of the total\n",
+      "2236 DGC images were removed due to bad clustering, or 0.08018648018648018 percent of the total\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "#Refined dataset statistics\n",
+    "dropsea = len(ref_sea[\"filename\"].unique())\n",
+    "nodropsea = len(sea_nodrops[\"filename\"].unique())\n",
+    "missea = nodropsea - dropsea\n",
+    "persea = missea / nodropsea\n",
+    "\n",
+    "print(\"%s seagull images were removed due to bad clustering, or %s percent of the total\"%(missea,persea))\n",
+    "\n",
+    "drop = len(ref_zoo[\"filename\"].unique())\n",
+    "nodrop = len(zoo_nodrops[\"filename\"].unique())\n",
+    "misszoo = nodrop - drop\n",
+    "perzoo = misszoo / nodrop\n",
+    "print(\"%s DGC images were removed due to bad clustering, or %s percent of the total\"%(misszoo,perzoo))\n",
+    "#ref_zoo.head()\n",
+    "#ref_sea[\"category_id\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "2            15178\n",
-       "1             6674\n",
-       "3             3305\n",
-       "[1 3]          758\n",
-       "4              122\n",
-       "[2 3]           62\n",
-       "[1 2]           36\n",
-       "[2 4]           34\n",
-       "[3 4]           29\n",
-       "[1 2 3]         22\n",
-       "[1 4]           14\n",
-       "[1 3 4]         10\n",
-       "[2 3 4]          6\n",
-       "[1 2 3 4]        2\n",
-       "[1 2 4]          2\n",
-       "Name: category_id, dtype: int64"
+       "1192469"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/21/q9_tvtjj53n6mfprd_174cz00000gn/T/ipykernel_21418/3532301414.py:2: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  clusters = dgc.groupby(\"filename\")[\"bbox_orig\",\"cluster_id\",\"labeler_id\"].nunique()\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Search for images that have an unexpected number of clusters-- see how many there are \n",
+    "clusters = dgc.groupby(\"filename\")[\"bbox_orig\",\"cluster_id\",\"labeler_id\"].nunique()\n",
+    "c = clusters.reset_index()\n",
+    "c[\"expected\"] = c[\"bbox_orig\"]/c[\"labeler_id\"]\n",
+    "c[\"diff\"] = c[\"cluster_id\"]/c[\"expected\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20178"
+      ]
+     },
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Refined dataset statistics\n",
-    "print(len(ref_sea))\n",
-    "#ref_zoo.head()\n",
-    "ref_sea[\"category_id\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Search for images that have an unexpected number of clusters and remove from analysis"
+    "pd.eval(\"c['diff'] > 1.1 or c['diff'] < 0.9\").sum()\n"
    ]
   },
   {
