--- a/expertconsensus.ipynb
+++ b/expertconsensus.ipynb
@@ -40,6 +40,300 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>annotation_ID</th>\n",
+       "      <th>bbox_orig</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>labeler</th>\n",
+       "      <th>cat_orig</th>\n",
+       "      <th>cluster_id</th>\n",
+       "      <th>cat_refined</th>\n",
+       "      <th>bbox_refined</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[4428, 2707, 125, 103]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4445.5, 2719.5, 95.0, 80.5]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[4308, 2731, 105, 67]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4312.5, 2739.5, 98.0, 44.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[3707, 1761, 110, 101]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3725.5, 1779.0, 73.5, 70.5]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[3628, 1882, 90, 38]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3628.0, 1882.0, 92.0, 38.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>[3669, 1927, 69, 82]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3679.0, 1929.0, 65.0, 82.0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  annotation_ID               bbox_orig                filename  \\\n",
+       "0           0              1  [4428, 2707, 125, 103]  BDA_12C_20181127_1.JPG   \n",
+       "1           1              2   [4308, 2731, 105, 67]  BDA_12C_20181127_1.JPG   \n",
+       "2           2              3  [3707, 1761, 110, 101]  BDA_12C_20181127_1.JPG   \n",
+       "3           3              4    [3628, 1882, 90, 38]  BDA_12C_20181127_1.JPG   \n",
+       "4           4              5    [3669, 1927, 69, 82]  BDA_12C_20181127_1.JPG   \n",
+       "\n",
+       "                 labeler        cat_orig  cluster_id     cat_refined  \\\n",
+       "0  steven_sesnie@fws.gov  Canadian Goose           0  Canadian Goose   \n",
+       "1  steven_sesnie@fws.gov  Canadian Goose           1  Canadian Goose   \n",
+       "2  steven_sesnie@fws.gov  Canadian Goose           2  Canadian Goose   \n",
+       "3  steven_sesnie@fws.gov  Canadian Goose           3  Canadian Goose   \n",
+       "4  steven_sesnie@fws.gov  Canadian Goose           4  Canadian Goose   \n",
+       "\n",
+       "                   bbox_refined  \n",
+       "0  [4445.5, 2719.5, 95.0, 80.5]  \n",
+       "1  [4312.5, 2739.5, 98.0, 44.0]  \n",
+       "2  [3725.5, 1779.0, 73.5, 70.5]  \n",
+       "3  [3628.0, 1882.0, 92.0, 38.0]  \n",
+       "4  [3679.0, 1929.0, 65.0, 82.0]  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/21/q9_tvtjj53n6mfprd_174cz00000gn/T/ipykernel_21390/3555870435.py:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  clusters = df.groupby(\"filename\")[\"bbox_orig\",\"cluster_id\",\"labeler\"].nunique()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bbox_orig</th>\n",
+       "      <th>cluster_id</th>\n",
+       "      <th>labeler</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>filename</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>BDA_12C_20181127_1.JPG</th>\n",
+       "      <td>841</td>\n",
+       "      <td>86</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BDA_12C_20181127_2.JPG</th>\n",
+       "      <td>3817</td>\n",
+       "      <td>489</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BDA_12C_20181127_3.JPG</th>\n",
+       "      <td>4867</td>\n",
+       "      <td>793</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BDA_18A4_20181106_1.JPG</th>\n",
+       "      <td>1622</td>\n",
+       "      <td>164</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BDA_18A4_20181106_2.JPG</th>\n",
+       "      <td>3497</td>\n",
+       "      <td>356</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BDA_18A4_20181106_3.JPG</th>\n",
+       "      <td>438</td>\n",
+       "      <td>63</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BDA_18A4_20181106_4.JPG</th>\n",
+       "      <td>1145</td>\n",
+       "      <td>116</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BDA_18A4_20181107_1.JPG</th>\n",
+       "      <td>780</td>\n",
+       "      <td>79</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BDA_18A4_20181107_2.JPG</th>\n",
+       "      <td>201</td>\n",
+       "      <td>27</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BDA_18A4_20181107_3.JPG</th>\n",
+       "      <td>895</td>\n",
+       "      <td>90</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BDA_18A4_20181107_4.JPG</th>\n",
+       "      <td>839</td>\n",
+       "      <td>85</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BDA_24C_20181107_1.JPG</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mxw_L13_20181215_1.JPG</th>\n",
+       "      <td>381</td>\n",
+       "      <td>39</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         bbox_orig  cluster_id  labeler\n",
+       "filename                                               \n",
+       "BDA_12C_20181127_1.JPG         841          86       10\n",
+       "BDA_12C_20181127_2.JPG        3817         489        8\n",
+       "BDA_12C_20181127_3.JPG        4867         793        6\n",
+       "BDA_18A4_20181106_1.JPG       1622         164       10\n",
+       "BDA_18A4_20181106_2.JPG       3497         356       10\n",
+       "BDA_18A4_20181106_3.JPG        438          63        7\n",
+       "BDA_18A4_20181106_4.JPG       1145         116       10\n",
+       "BDA_18A4_20181107_1.JPG        780          79       10\n",
+       "BDA_18A4_20181107_2.JPG        201          27        7\n",
+       "BDA_18A4_20181107_3.JPG        895          90       10\n",
+       "BDA_18A4_20181107_4.JPG        839          85       10\n",
+       "BDA_24C_20181107_1.JPG          12           1        4\n",
+       "mxw_L13_20181215_1.JPG         381          39       10"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clusters = df.groupby(\"filename\")[\"bbox_orig\",\"cluster_id\",\"labeler\"].nunique()\n",
+    "c = clusters.reset_index()\n",
+    "c[\"expected\"] = c[\"bbox_orig\"]/c[\"labeler\"]\n",
+    "c[\"diff\"] = c[\"cluster_id\"]/c[\"expected\"]\n",
+    "clusters\n",
+    "#pd.eval(\"c['diff'] > 1.1 or c['diff'] < 0.9\").sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
