to start tomorrow- looking at count variance

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/21/q9_tvtjj53n6mfprd_174cz00000gn/T/ipykernel_21418/3532301414.py:2: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "/var/folders/21/q9_tvtjj53n6mfprd_174cz00000gn/T/ipykernel_22460/3532301414.py:2: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  clusters = dgc.groupby(\"filename\")[\"bbox_orig\",\"cluster_id\",\"labeler_id\"].nunique()\n"
      ]
     }
@@ -126,22 +126,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "20178"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06892594584902277\n",
+      "0.654688900842747\n"
+     ]
     }
    ],
    "source": [
-    "pd.eval(\"c['diff'] > 1.1 or c['diff'] < 0.9\").sum()\n"
+    "more = pd.eval(\"c['diff'] > 1.1\").sum()\n",
+    "less = pd.eval(\"c['diff'] < 0.9\").sum()\n",
+    "total = len(dgc[\"filename\"].unique())\n",
+    "print(less/total)\n",
+    "print(more/total)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TOMORROW: Group by filename, labeler-- count the number of original bounding boxes per labeler, get range/variance\n",
+    "#Do this also for the expert set"
    ]
   },
   {
