establishing validity of clusters

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -13,17 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Imports\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,32 +87,346 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>annotation_id</th>\n",
+       "      <th>bbox_orig</th>\n",
+       "      <th>cat_id_orig</th>\n",
+       "      <th>cat_orig</th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>labeler_id</th>\n",
+       "      <th>cluster_id</th>\n",
+       "      <th>cat_id_refined</th>\n",
+       "      <th>bbox_refined</th>\n",
+       "      <th>cat_refined</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>956322</td>\n",
+       "      <td>956323</td>\n",
+       "      <td>[616.8966064453125, 247.40164184570312, 78.357...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[634.05224609375, 260.4735412597656, 49.0, 80....</td>\n",
+       "      <td>Goose</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>956323</td>\n",
+       "      <td>956324</td>\n",
+       "      <td>[555.4261474609375, 212.951171875, 53.36450195...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[555.4261474609375, 216.25, 53.0, 69.0]</td>\n",
+       "      <td>Goose</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>956324</td>\n",
+       "      <td>956325</td>\n",
+       "      <td>[351.4253234863281, 212.2756805419922, 69.5764...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[369.28125, 237.5530014038086, 61.433685302734...</td>\n",
+       "      <td>Goose</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>956325</td>\n",
+       "      <td>956326</td>\n",
+       "      <td>[261.58392333984375, 108.92428588867188, 66.87...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[266.75, 120.83124542236328, 60.33087158203125...</td>\n",
+       "      <td>Goose</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>956326</td>\n",
+       "      <td>956327</td>\n",
+       "      <td>[174.44451904296875, 22.46035385131836, 61.470...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[176.8125, 22.46035385131836, 52.0, 84.0]</td>\n",
+       "      <td>Goose</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0   index  annotation_id  \\\n",
+       "0           0  956322         956323   \n",
+       "1           1  956323         956324   \n",
+       "2           2  956324         956325   \n",
+       "3           3  956325         956326   \n",
+       "4           4  956326         956327   \n",
+       "\n",
+       "                                           bbox_orig  cat_id_orig cat_orig  \\\n",
+       "0  [616.8966064453125, 247.40164184570312, 78.357...            3     Duck   \n",
+       "1  [555.4261474609375, 212.951171875, 53.36450195...            3     Duck   \n",
+       "2  [351.4253234863281, 212.2756805419922, 69.5764...            3     Duck   \n",
+       "3  [261.58392333984375, 108.92428588867188, 66.87...            3     Duck   \n",
+       "4  [174.44451904296875, 22.46035385131836, 61.470...            3     Duck   \n",
+       "\n",
+       "   image_id                         filename  labeler_id  cluster_id  \\\n",
+       "0     28077  20211201_Atrisco_0459_01_01.png        4721           0   \n",
+       "1     28077  20211201_Atrisco_0459_01_01.png        4721           1   \n",
+       "2     28077  20211201_Atrisco_0459_01_01.png        4721           8   \n",
+       "3     28077  20211201_Atrisco_0459_01_01.png        4721           2   \n",
+       "4     28077  20211201_Atrisco_0459_01_01.png        4721           3   \n",
+       "\n",
+       "   cat_id_refined                                       bbox_refined  \\\n",
+       "0             2.0  [634.05224609375, 260.4735412597656, 49.0, 80....   \n",
+       "1             2.0            [555.4261474609375, 216.25, 53.0, 69.0]   \n",
+       "2             2.0  [369.28125, 237.5530014038086, 61.433685302734...   \n",
+       "3             2.0  [266.75, 120.83124542236328, 60.33087158203125...   \n",
+       "4             2.0          [176.8125, 22.46035385131836, 52.0, 84.0]   \n",
+       "\n",
+       "  cat_refined  \n",
+       "0       Goose  \n",
+       "1       Goose  \n",
+       "2       Goose  \n",
+       "3       Goose  \n",
+       "4       Goose  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dgc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>bbox</th>\n",
+       "      <th>category</th>\n",
+       "      <th>basefile</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[634.05224609375, 260.4735412597656, 49.0, 80....</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>20211201_Atrisco_0459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[555.4261474609375, 216.25, 53.0, 69.0]</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>20211201_Atrisco_0459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[266.75, 120.83124542236328, 60.33087158203125...</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>20211201_Atrisco_0459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[176.8125, 22.46035385131836, 52.0, 84.0]</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>20211201_Atrisco_0459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[101.36946105957031, 170.06580352783203, 62.24...</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>20211201_Atrisco_0459</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                         filename  category_id  \\\n",
+       "0           1  20211201_Atrisco_0459_01_01.png            2   \n",
+       "1           2  20211201_Atrisco_0459_01_01.png            2   \n",
+       "2           3  20211201_Atrisco_0459_01_01.png            2   \n",
+       "3           4  20211201_Atrisco_0459_01_01.png            2   \n",
+       "4           5  20211201_Atrisco_0459_01_01.png            2   \n",
+       "\n",
+       "                                                bbox category  \\\n",
+       "0  [634.05224609375, 260.4735412597656, 49.0, 80....    Goose   \n",
+       "1            [555.4261474609375, 216.25, 53.0, 69.0]    Goose   \n",
+       "2  [266.75, 120.83124542236328, 60.33087158203125...    Goose   \n",
+       "3          [176.8125, 22.46035385131836, 52.0, 84.0]    Goose   \n",
+       "4  [101.36946105957031, 170.06580352783203, 62.24...    Goose   \n",
+       "\n",
+       "                basefile  \n",
+       "0  20211201_Atrisco_0459  \n",
+       "1  20211201_Atrisco_0459  \n",
+       "2  20211201_Atrisco_0459  \n",
+       "3  20211201_Atrisco_0459  \n",
+       "4  20211201_Atrisco_0459  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ref_zoo[\"basefile\"] = [x[:-10] for x in ref_zoo['filename']]\n",
+    "ref_zoo.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1192469"
+       "['BDA_18a4_20181106_2_00298']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#CONSENSUS CHECK: COMPARING COUNTS BETWEEN COMMON IMAGES LABELED BY EXPERTS AND THE CROWD\n",
+    "\n",
+    "#Directory of original filenames for expert labeled images-- currently only found 1, need to match the other 11 tomorrow\n",
+    "imgpath = r\"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/CV4Ecology/Prototyping/Data/Imagery/USFWS/raw/original_filenames\"\n",
+    "imglist = os.listdir(imgpath)\n",
+    "imglist = [s.strip('.JPG') for s in imglist]\n",
+    "\n",
+    "#filter the refined labels to only those that match the expert list\n",
+    "expertmatch = ref_zoo[ref_zoo[\"basefile\"] in imglist]\n",
+    "\n",
+    "#Group the expert labels by filename and count the number of boxes per image\n",
+    "expertmatch.groupby(\"filename\")[\"bbox\"].count().reset_index()\n",
+    "\n",
+    "#join to cluster check table (count of expert clusters)\n",
+    "countpath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/clustercheck.csv\"\n",
+    "with open(countpath) as f:\n",
+    "  count = pd.read_csv(f)\n",
+    "compare = pd.merge(expertmatch,count, left_on=\"filename\", right_on=\"filename\")\n",
+    "\n",
+    "#difference between absolute counts \n",
+    "compare[\"diff\"] = compare[\"count\"] - compare[\"cluster_id\"]\n",
+    "# % percent diff between counts\n",
+    "compare[\"percent\"] = compare[\"diff\"]/compare[\"cluster_id\"]\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/21/q9_tvtjj53n6mfprd_174cz00000gn/T/ipykernel_22460/3532301414.py:2: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "/var/folders/21/q9_tvtjj53n6mfprd_174cz00000gn/T/ipykernel_23186/3532301414.py:2: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  clusters = dgc.groupby(\"filename\")[\"bbox_orig\",\"cluster_id\",\"labeler_id\"].nunique()\n"
      ]
     }
@@ -126,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,12 +463,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.015625, 2.2295081967213113)\n",
+      "0.3394791955047448\n",
+      "0.11524612418054876\n"
+     ]
+    }
+   ],
+   "source": [
+    "def minmax(val_list):\n",
+    "    min_val = min(val_list)\n",
+    "    max_val = max(val_list)\n",
+    "\n",
+    "    return (min_val, max_val)\n",
+    "\n",
+    "print(minmax(c[\"diff\"]))\n",
+    "print(c[\"diff\"].std())\n",
+    "print(c[\"diff\"].var())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 112568)\n",
+      "1993.1388053337373\n",
+      "3972602.297327197\n",
+      "0    1\n",
+      "Name: bbox_orig, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "#TOMORROW: Group by filename, labeler-- count the number of original bounding boxes per labeler, get range/variance\n",
-    "#Do this also for the expert set"
+    "range = dgc.groupby(\"labeler_id\")[\"bbox_orig\"].count()\n",
+    "print(minmax(range))\n",
+    "print(range.std())\n",
+    "print(range.var())\n",
+    "print(range.mode())\n",
+    "\n"
    ]
   },
   {
