--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -24,15 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Analysis annotations\n",
-    "dgc_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseanalysislabels.csv\"\n",
+    "dgc_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseanalysislabels_nodrops.csv\"\n",
     "with open(dgc_path) as f:\n",
     "  dgc = pd.read_csv(f)\n",
-    "seagull_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseanalysislabels_seagull.csv\"\n",
+    "seagull_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_zooniverseanalysislabels_seagull_nodrops.csv\"\n",
     "with open(seagull_path) as f:\n",
     "  seagull = pd.read_csv(f)\n",
     "\n",
@@ -83,6 +83,29 @@
     "print(\"%s DGC images were removed due to bad clustering, or %s percent of the total\"%(misszoo,perzoo))\n",
     "#ref_zoo.head()\n",
     "#ref_sea[\"category_id\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "196693"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing = dgc[dgc[\"cluster_id\"] == -1]\n",
+    "len(missing)\n",
+    "#print(dgc['cluster_id']).value_counts()\n",
+    "#print(seagull['cluster_id']).value_counts()"
    ]
   },
   {
@@ -259,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +387,7 @@
        "4  20211201_Atrisco_0459  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,16 +399,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['BDA_18a4_20181106_2_00298']"
+       "1032"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ref_zoo[\"basefile\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "162"
+      ]
+     },
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,22 +442,65 @@
     "imglist = [s.strip('.JPG') for s in imglist]\n",
     "\n",
     "#filter the refined labels to only those that match the expert list\n",
-    "expertmatch = ref_zoo[ref_zoo[\"basefile\"] in imglist]\n",
+    "# expertmatch = ref_zoo[ref_zoo[\"basefile\"] in imglist]\n",
+    "expertmatch = ref_zoo[ref_zoo[\"basefile\"] == \"BDA_18a4_20181106_2_00298\"]\n",
+    "len(expertmatch)\n",
+    "# #Group the expert labels by filename and count the number of boxes per image\n",
+    "# expertmatch.groupby(\"filename\")[\"bbox\"].count().reset_index()\n",
     "\n",
-    "#Group the expert labels by filename and count the number of boxes per image\n",
-    "expertmatch.groupby(\"filename\")[\"bbox\"].count().reset_index()\n",
+    "# #join to cluster check table (count of expert clusters)\n",
+    "# countpath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/clustercheck.csv\"\n",
+    "# with open(countpath) as f:\n",
+    "#   count = pd.read_csv(f)\n",
+    "# compare = pd.merge(expertmatch,count, left_on=\"filename\", right_on=\"filename\")\n",
     "\n",
-    "#join to cluster check table (count of expert clusters)\n",
-    "countpath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/clustercheck.csv\"\n",
-    "with open(countpath) as f:\n",
-    "  count = pd.read_csv(f)\n",
-    "compare = pd.merge(expertmatch,count, left_on=\"filename\", right_on=\"filename\")\n",
-    "\n",
-    "#difference between absolute counts \n",
-    "compare[\"diff\"] = compare[\"count\"] - compare[\"cluster_id\"]\n",
-    "# % percent diff between counts\n",
-    "compare[\"percent\"] = compare[\"diff\"]/compare[\"cluster_id\"]\n",
+    "# #difference between absolute counts \n",
+    "# compare[\"diff\"] = compare[\"count\"] - compare[\"cluster_id\"]\n",
+    "# # % percent diff between counts\n",
+    "# compare[\"percent\"] = compare[\"diff\"]/compare[\"cluster_id\"]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5503"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dgc[\"labeler_id\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dgc[\"basefile\"] = [x[:-10] for x in dgc['filename']]\n",
+    "sub = dgc[dgc[\"basefile\"] == \"BDA_18a4_20181106_2_00298\"]\n",
+    "len(sub[\"cluster_id\"].value_counts())\n"
    ]
   },
   {
